5.1.4 -> 5.1.5:
    - jbj: rescusitate w make distcheck.
    - jbj: update po files.
    - jbj: don't attempt openssl memleak cleanup w/o openssl.
    - jbj: WR: add devtool windriver-{host,target} configuration targets.
    - jbj: adopt AM_PATH_PYTHON AutoFu variables. AM_PATH_PYTHON will be used eventually.
    - jbj: python: simplify Makefile.am
    - afb: check that crc32_combine/adler32_combine really exist, for murky old
	zlib.
    - afb: remove undefined references too
    - jbj: WR: run-time discovered configuration goopiness, take 1.
    - jbj: display cpuinfo path with --showrc.
    - jbj: display sysinfo path with --showrc.
    - jbj: remove internal zlib.
    - jbj: WR: add %windriver target to devtool.conf.
    - jbj: WR: eliminate most compiler warnings.
    - jbj: WR: eliminate duplicated AutoFu boilerplate, use system.h instead.
    - jbj: WR: eliminate getdate.[ch], use same from rpmio instead.
    - jbj: WR: eliminate dueling AutoFu defines from shadow_config.h, use RPM's
        config.h (through system.h) instead.
    - jbj: WR: eliminate xmalloc.c, use system.h defines instead.
    - jbj: WR: rename config.h to shadow_config.h, include "system.h" instead.
    - jbj: WR: rely on PATH to find pkg-config.
    - jbj: WR: don't spew error messages with internal lua shadow module.
    - jbj: WR: add shadow/chkconfig internal lua modules.
    - jbj: WR: Color/arch affinity while upgrading on multilib platforms.
    - jbj: WR: Permit configurable arch strings.
    - jbj: WR: Use %{_host_vendor} and %{_host_os} for platform.
    - jbj: WR: fakeroot maps devices to files. avoid /dev/* in checkfiles.
    - jbj: db_tool: remove gcc whinings.
    - at: gzdio: fixed and re-enabled rsyncable_gzwrite()
    - rse: fix building under --with-lzma by providing the necessary 64-bit defines for inclusion of <lzma.h>
    - jbj: gzdio: quadruple check with external -lz. still no fix => disabled.